# dh_bin_wizard

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  bin-deb.mk  cmd.hist  control.patch.template  dh_bin_wizard.mk  mira-installer-binary.sh  mira-installer.sh  mira-src.mk  mira-trusty64.mk  mira.mk  morse-setup.sh  morse-strands.mk  morse.mk  package.xml  prism-robots-precise.mk  prism-robots-trusty.mk  rules.patch.template  strands-morse-setup-trusty.sh  strands-morse-simulator-trusty.mk
DEBIAN/: control
patches/: control.patch  rules.patch
