<?xml version="1.0"?>
<package>
  <name>mira</name>
  <version>0.0.0</version>
  <description>The mira package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marc@todo.todo">marc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPL3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mira</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>libqwt5-qt4-dev</build_depend>
  <build_depend>libsqlite3-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libsvn-dev</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>libxrandr</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pyqt4-dev-tools</build_depend>
  <build_depend>qt4-dev-tools</build_depend>
  <build_depend>subversion</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>libncurses-dev</run_depend>
  <run_depend>libogre-dev</run_depend>
  <run_depend>libqwt5-qt4-dev</run_depend>
  <run_depend>libsqlite3-dev</run_depend>
  <run_depend>libssl-dev</run_depend>
  <run_depend>libsvn-dev</run_depend>
  <run_depend>libxml2</run_depend>
  <run_depend>libxrandr</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>pyqt4-dev-tools</run_depend>
  <run_depend>qt4-dev-tools</run_depend>
  <run_depend>subversion</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>